# MayaAPICode

./: .gitignore  BuildAll.pro  CMakeLists.txt  README.md
CustomSphereSolution/: CMakeLists.txt  CustomSphere.pro
CustomSphereSolution/include/: CustomSphere.h
CustomSphereSolution/src/: CustomSphere.cpp  Plugin.cpp
JoyPadMaya/: .qmake.stash  GameInput.pro  JoyPadNode.pro  gameInputDevice.cpp  test.mel
JoyPadMaya/include/: JoyPadNode.h  api_macros.h
JoyPadMaya/src/: JoyPadNode.cpp  Plugin.cpp
Lecture1/: README.md
Lecture1/CustomSphere/: CMakeLists.txt  CustomSphere.pro  CustomSphere.vcxproj  Makefile  customSphere.bundle
Lecture1/CustomSphere/include/: CustomSphere.h
Lecture1/CustomSphere/src/: CustomSphere.cpp  Plugin.cpp
Lecture1/Hello/: CMakeLists.txt  HelloMaya.bundle  HelloMaya.cpp  HelloMaya.pro  HelloMaya.vcxproj  Makefile
Lecture2/: CMakeLists.txt
Lecture2/Locator/: CMakeLists.txt  CubeLocator.pro  CubeLocatorNode.bundle  Makefile
Lecture2/Locator/include/: CubeLocatorNode.h  CubeLocatorNodeDrawOverride.h
Lecture2/Locator/src/: CubeLocatorNode.cpp  CubeLocatorNodeDrawOverride.cpp  Plugin.cpp
Lecture2/Noise/: CMakeLists.txt  Makefile  NoiseNode.pro  createMesh.mel  noiseNode.bundle  updateMesh.py
Lecture2/Noise/include/: Noise.h  NoiseNode.h
Lecture2/Noise/src/: Noise.cpp  NoiseNode.cpp  Plugin.cpp
Lecture2/SineNode/: CMakeLists.txt  Makefile  SineNode.pro  createSineBall.py  sineNode.bundle
Lecture2/SineNode/include/: SineNode.h
Lecture2/SineNode/src/: Plugin.cpp  SineNode.cpp
Lecture2/TriLocatorNode/: CMakeLists.txt  README.md
Lecture2/TriLocatorNode/include/: TriLocatorNode.h  TriLocatorNodeData.h  TriLocatorNodeDrawOverride.h
Lecture2/TriLocatorNode/src/: Plugin.cpp  TriLocatorNode.cpp  TriLocatorNodeDrawOverride.cpp
Lecture3/: CMakeLists.txt
Lecture3/DAGIt/: CMakeLists.txt  DAGIt.bundle  DAGIt.cpp  DAGIt.pro  Makefile
Lecture3/Frames/: CMakeLists.txt  Makefile  TimeLine.bundle  TimeLine.cpp  TimeLine.pro  frames.py
Lecture3/GetSelection/: CMakeLists.txt  GetSelection.bundle  GetSelection.cpp  GetSelection.pro  Makefile  get_selection.py
Lecture3/MComputation/: CMakeLists.txt  MComputation.cpp  MComputation.pro  MComputationTest.bundle  Makefile  mcomp.py
Lecture3/RibExporter/: .qmake.stash  CMakeLists.txt  RibExport.pro  RibExportScript.mel
Lecture3/RibExporter/include/: RibExport.h
Lecture3/RibExporter/src/: Plugin.cpp  RibExport.cpp
Lecture3/TriLocatorNode/: CMakeLists.txt  README.md
Lecture3/TriLocatorNode/include/: TriLocatorNode.h  TriLocatorNodeData.h  TriLocatorNodeDrawOverride.h
Lecture3/TriLocatorNode/src/: Plugin.cpp  TriLocatorNode.cpp  TriLocatorNodeDrawOverride.cpp
Python/: PythonPlug.py
PythonPlugins/: CustomSphere.py  CustomSphereSolution.py  HelloMaya.py  IPNodeDemo.py  InputNode.py  PythonPlug.py  QtUIMaya.py  SineNode.py
PythonPlugins/QtUI/: QtUIMaya.mod  README.md  installModule.py
PythonPlugins/QtUI/plug-ins/: QtUIMaya.py
PythonPlugins/QtUI/ui/: form.ui
PythonPlugins/tests/: test_CustomSphere.py  test_CustomSphereSolution.py  test_SineNode.py
PythonScripts/: ImageMapExample.py  MayaImage.py  bounce.py  imageMap.tif  mayaExample1.py  mayaExample2.py  mayaExample3.py  pymelExample1.py
PythonScripts/UnitTestMaya/: MayaImage.py  TestMayaImage.py
QtGuiC++/: CMakeLists.txt  QtGuiCpp.pro
QtGuiC++/include/: QtGui.h
QtGuiC++/src/: Plugin.cpp  QtGui.cpp
Sequence/: TestNode.pro
Sequence/include/: TestNode.h
Sequence/src/: Plugin.cpp  TestNode.cpp
